# persona-ows

./: .env.example  .gitignore  .mcp.json  README.md  package-lock.json  package.json  tailwind.config.mjs  tsconfig.node.json  vite.config.ts
agent/: agent.py  config.py  main.py  models.py  proactive.py  pyproject.toml
agent/context/: profile.json
agent/services/: bitrefill_client.py  browser_service.py  ows_wallet.py  zinc_client.py
site/: .env.example  index.html  package-lock.json  package.json  supabase-setup.sql  tailwind.config.mjs
site/server/: index.ts
site/src/: App.tsx
site/src/components/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Logo.tsx  Navbar.tsx  Trust.tsx  Waitlist.tsx
site/src/hooks/: useScrollReveal.ts
site/src/lib/: supabase.ts
site/src/styles/: globals.css
src/main/: db.ts  index.ts  ipc-handlers.ts  python-bridge.ts  wallet.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html
src/renderer/components/: ApprovalCard.tsx
src/renderer/hooks/: useVoice.ts
src/renderer/lib/: ipc.ts
src/renderer/pages/: ChatPage.tsx  OnboardingPage.tsx  OrdersPage.tsx  SettingsPage.tsx  WalletPage.tsx
src/renderer/styles/: globals.css
src/renderer/types/: moonshine.d.ts
supabase/.temp/: pooler-url  project-ref
